[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }
anyhow = "1.0.51"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
