[package]
name = "ipfs-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.6", features = ["stream", "json"] }
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = "1.0.51"
futures = "0.3.28"

[profile.release]
opt-level = 3
lto = true
debug = false
strip = true
